Apply bootstrap datatable to view_attendance and view_by_homeroom tables too. - rely on datatable styling for column wrapping and alignment instead of specific width - rely on datatable stripe styling instead of CSS - used word-wrap:break-word for attend-view-header to fix spilling issue - added margin-right after "location" header content to avoid it to   appear scrambled or mixed with "enrolled" header content - used FixedColumn plugin and scrollX to help address real-estate concerns - correct non-unique element ID's

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -303,31 +303,39 @@ textarea {
   margin-right: 5px;
   margin-left: 15px;
 }
-#attend-view-class {
+.attend-view-class {
   margin: 0px 0px 60px 0px;
   border: 1px solid #555;
   border-radius: 5px;
 }
-#attend-view-header {
+.attend-view-header {
   border-bottom: 1px solid #555;
   background-color: #d1dfe3;
   padding: 6px 0px 4px 7px;
   border-radius: 5px 5px 0px 0px;
   font-weight: bold;
 }
-#attend-view-class-table {
+.attend-view-header div {
+  word-wrap:break-word;
+}
+.attend-view-class-table {
   /*border-left: 1px solid #555;
   border-right: 1px solid #555;*/
   border-collapse: collapse;
 }
-#attend-view-class-table th, #attend-view-class-table td {
+.attend-view-class-table th, .attend-view-class-table td {
   padding: 2px 8px 0;
   border: 1px solid #ccc;
   border-collapse: collapse;
 }
-#attend-view-class-table tbody tr:nth-child(odd) {
-  background-color: #f1f1f1;;
+/*
+.attend-view-class-table tbody tr:nth-child(even) {
+  background-color: white !important;
 }
+.attend-view-class-table tbody tr:nth-child(odd) {
+  background-color: #f1f1f1 !important;
+}
+*/
 .attend-homeroom {
   font-size: 28px;
   width = 400px;
